src/objects/WorkStep.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>