src/objects/WorkStep/fields/GDMFSL_Reading_UOM__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Reading_UOM__c</fullName>
    <description>.</description>
    <label>Reading UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>psi</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>Deg C</fullName>
            </value>
            <value>
                <fullName>Amph</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Ze</fullName>
            </value>
            <value>
                <fullName>OHMS</fullName>
            </value>
            <value>
                <fullName>Version</fullName>
            </value>
            <value>
                <fullName>Volts</fullName>
            </value>
            <value>
                <fullName>Amp/Hours</fullName>
            </value>
            <value>
                <fullName>BHP</fullName>
            </value>
            <value>
                <fullName>BTU</fullName>
            </value>
            <value>
                <fullName>CFM</fullName>
            </value>
            <value>
                <fullName>Db</fullName>
            </value>
            <value>
                <fullName>Dbm</fullName>
            </value>
            <value>
                <fullName>DD/MM/YY</fullName>
            </value>
            <value>
                <fullName>Deg F</fullName>
            </value>
            <value>
                <fullName>Error code</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Foot Candles</fullName>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>GJ</fullName>
            </value>
            <value>
                <fullName>GPM</fullName>
            </value>
            <value>
                <fullName>Hertz</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Inches</fullName>
            </value>
            <value>
                <fullName>Inches Hg</fullName>
            </value>
            <value>
                <fullName>Inches WC</fullName>
            </value>
            <value>
                <fullName>KCal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>