src/objects/WorkStep/fields/GDMFSL_SFG_Criticality__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_SFG_Criticality__c</fullName>
    <description>.</description>
    <label>SFG Criticality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>