src/objects/WorkStep/fields/GDMFSL_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Task_Type__c</fullName>
    <description>.</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Controls</fullName>
            </value>
            <value>
                <fullName>Electrical - LV &amp; MV</fullName>
            </value>
            <value>
                <fullName>Combustion - Natural Gas</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Security - CCTV</fullName>
            </value>
            <value>
                <fullName>Security - Access</fullName>
            </value>
            <value>
                <fullName>Security - Intruder</fullName>
            </value>
            <value>
                <fullName>Combustion - Oil</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Fire - Detection</fullName>
            </value>
            <value>
                <fullName>Fire - PAVA</fullName>
            </value>
            <value>
                <fullName>ICT/Networks</fullName>
            </value>
            <value>
                <fullName>Refrigeration - Chillers</fullName>
            </value>
            <value>
                <fullName>Refrigeration - Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Electrical - HV</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
                <isActive>false</isActive>
                <label>Fire</label>
            </value>
            <value>
                <fullName>ICT</fullName>
                <isActive>false</isActive>
                <label>ICT</label>
            </value>
            <value>
                <fullName>Refrigeration</fullName>
                <isActive>false</isActive>
                <label>Refrigeration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>