src/objects/WorkStep/fields/GDMFSL_Total_Time_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Total_Time_in_Minutes__c</fullName>
    <label>Total Time in Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>